unpackaged/main/default/objects/Contigency__c/Contigency__c.object-meta.xml
<CustomObject>
    <label>Contingency</label>
    <nameField>
        <displayFormat>C-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contingencies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>