unpackaged/main/default/objects/Contigency__c/fields/Expiry_date__c.field-meta.xml
<CustomField>
        <fullName>Expiry_date__c</fullName>
        <label>Expiry date</label>
        <required>true</required>
        <type>Date</type>
    </CustomField>