unpackaged/main/default/objects/Contigency__c/fields/Met_date__c.field-meta.xml
<CustomField>
        <fullName>Met_date__c</fullName>
        <label>Met date</label>
        <type>Date</type>
    </CustomField>