unpackaged/main/default/objects/Contigency__c/fields/Opportunity__c.field-meta.xml
<CustomField>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Contigencies</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </CustomField>