unpackaged/main/default/objects/Contigency__c/fields/Type__c.field-meta.xml
<CustomField>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Home to Sell</fullName>
                </value>
                <value>
                    <fullName>Home to Lease</fullName>
                </value>
                <value>
                    <fullName>Home to Close</fullName>
                </value>
                <value>
                    <fullName>Financing Contingency</fullName>
                </value>
                <value>
                    <fullName>Lawyer Approval</fullName>
                </value>
                <value>
                    <fullName>SiteUnseen Contingency</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>